# Hackathon-2-ToDo-Complete

./: .gitignore  CLAUDE.md  README.md  constitution.md  main.py  package-lock.json  pyproject.toml  run_api.py  test_database.py  todo-ui.html  verify_persistence.py
.claude/: settings.local.json
hackathon-phase-2-and-3/: README.md
hackathon-phase-2-and-3/backend/: requirements.txt  run.py
hackathon-phase-2-and-3/frontend/: Dockerfile
hackathon-todo-phase4/: QUICKSTART.md  README.md  containerization_plan.md  deploy.sh  docker-compose.yml  k8s_requirements.md  start-app.ps1
hackathon-todo-phase4/.spec-kit/: config.yaml
hackathon-todo-phase4/ai-agent/: main.py  mcp_sdk.py  requirements.txt  skills.py  subagents.py
hackathon-todo-phase4/backend/: auth.py  chat_persistence.py  main.py  requirements.txt
hackathon-todo-phase4/dockerfiles/: ai-agent.Dockerfile  backend.Dockerfile  frontend.Dockerfile
hackathon-todo-phase4/frontend/: package-lock.json
hackathon-todo-phase4/k8s/: agent.yaml  backend.yaml  frontend.yaml
history/: phase1_completion_report.md  phase2_completion_report.md  phase3_completion_report.md
k8s-manifests/: ai-agent-deployment.yaml  ai-agent.yaml  backend.yaml  deploy.sh  frontend.yaml  namespace.yaml  postgres.yaml  pv-pvc.yaml
specs/phase1-console/: plan.md  spec.md  tasks.md
specs/phase2-web-api/: plan.md  spec.md  tasks.md
specs/phase3-database/: plan.md  spec.md  tasks.md
specs/phase4-frontend/: plan.md  spec.md  (+1 more)
src/: api.py  cli.py  database.py  models.py  services.py  utils.py
tests/: test_api.py  test_services.py
(+35 files in other folders)
